fix (PR review): copilot general comments